Added media with media class to search index listing image styling,

--- a/source/themes/custom/sata/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/sata/styles/libraries/node/search-index.scss
@@ -47,7 +47,8 @@
       }
     }
 
-    .node__listing-image {
+    .node__listing-image,
+    .node__media--with-media {
       @include flex();
       @include flex-x(align-items, center);
       @include flex-x(justify-content, center);
