--- a/source/themes/custom/sata/styles/libraries/region/header.scss
+++ b/source/themes/custom/sata/styles/libraries/region/header.scss
@@ -338,10 +338,8 @@ $mobile-menu-item-button-height: 7rem;
       }
     }
 
-    .secondary-menu:last-child {
-
+    .secondary-menu:last-child, .secondary-menu:nth-child(2) {
       h5 {
-
         a {
           @include link(light, hover);
           @include on-event() {
@@ -359,6 +357,17 @@ $mobile-menu-item-button-height: 7rem;
 
       ul.menu--depth-1 {
         padding-top: 0;
+      }
+    }
+
+    // Brazil modifications
+    &.brazil-main-menu .block__menu {
+      .secondary-menu:nth-child(2) {
+        margin-left: 1em;
+      }
+
+      .secondary-menu:not(.secondary-menu__first) {
+        flex: 1;
       }
     }
   }
