header style cleanup

--- a/source/themes/custom/sata/styles/libraries/region/header.scss
+++ b/source/themes/custom/sata/styles/libraries/region/header.scss
@@ -338,7 +338,8 @@ $mobile-menu-item-button-height: 7rem;
       }
     }
 
-    .secondary-menu:last-child, .secondary-menu:nth-child(2) {
+    .secondary-menu:last-child,
+    .secondary-menu:nth-child(2) {
       h5 {
         a {
           @include link(light, hover);
@@ -916,8 +917,6 @@ $mobile-menu-item-button-height: 7rem;
           }
         }
       }
-
-
 
       // Brazil modifications
       &.brazil-main-menu .block__menu {
