Added margin top none classy style and setting for all countries

--- a/source/themes/custom/sata/styles/libraries/paragraph/full--content-driver.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--content-driver.scss
@@ -19,8 +19,7 @@
 
   background-color: $primary-emerald;
   padding: rem(43px 0 30px);
-  margin-bottom: 0 !important;
-  // footer has margin-top: 5em
+  margin-bottom: 0;
 
   .component-content-driver__inner {
     @include container();
