--- a/docroot/themes/custom/sata/templates/paragraph/paragraph--sata-promise-line.html.twig
+++ b/docroot/themes/custom/sata/templates/paragraph/paragraph--sata-promise-line.html.twig
@@ -58,7 +58,10 @@
     {{ title_suffix }}
 
     <div{{ content_attributes.addClass(content_classes) }}>
-      {{ content }}
+      <div class="component-sata-promise-line__icon-container"></div>
+      <div class="component-sata-promise-line__copy">
+        {{ content }}
+      </div>
     </div>
 
     {% if footer_is_set %}
