Changed promise comment

--- a/source/themes/custom/sata/styles/libraries/paragraph/full--sata-promise.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--sata-promise.scss
@@ -39,10 +39,10 @@
 
   .component-sata-promise-line {
     &:nth-child(even) {
-      margin-left: calc((175px / 2) + 12px); // half of image container width
+      margin-left: calc((175px / 2) + 12px); // half of icon container width
 
       @include media('<md') {
-        margin-left: calc(79px / 2); // half of image container width
+        margin-left: calc(79px / 2); // half of icon container width
       }
     }
 
