--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
@@ -295,6 +295,7 @@ $tabs-border-width-active: rem(5px);
               font-weight: 800;
               font-size: rem(24px);
               font-family: $font-brand;
+              color: $color-black;
             }
 
             &[aria-selected='true'] {
