--- a/docroot/themes/custom/gearwrench_au/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/gearwrench_au/templates/node/node--product--full.html.twig
@@ -199,6 +199,16 @@
               </div>
 
               {{ content.field_product_features }}
+
+              {% if content.field_set_components|render|trim|length > 0 %}
+                <div class="product-set-components">
+                  <div class="node--type-product__accordion-content-header">
+                    {{ 'Contains' }}
+                  </div>
+
+                  {{ content.field_set_components }}
+                </div>
+              {% endif %}
             </div>
           </section>
 
@@ -252,7 +262,7 @@
         {{ related_items }}
       {% endif %}
 
-      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications',) }}
+      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications', 'field_set_components') }}
     </div>
   </div>
 </article>
