feature/contains-sata: Fixed some style issues for SATA contains.

--- a/source/themes/custom/sata/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--product.scss
@@ -533,6 +533,14 @@ $tabs-border-width-active: rem(5px);
                 }
               }
             }
+
+            .product-set-components {
+              margin-top: 4rem;
+
+              .node__sku {
+                text-decoration: underline;
+              }
+            }
           }
         }
       }
