--- a/source/themes/custom/sata/styles/libraries/node/set-listing--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/set-listing--product.scss
@@ -16,6 +16,10 @@
 .node--type-product.node--view-mode-set-listing {
   .node__inner {
     .node__content {
+      a {
+        text-decoration: none;
+      }
+
       .node__sku {
         display: inline-block;
         width: 120px;
