feature/VYRKCATG-528: Added the ability to hide the Price Spider widget entirely.

--- a/source/themes/custom/sata/styles/base/_base.scss
+++ b/source/themes/custom/sata/styles/base/_base.scss
@@ -200,3 +200,7 @@ body.toolbar-loading .toolbar-tray {
     margin-left: 250px;
   }
 }
+
+body.price-spider-hide .page #main-content .ps-widget {
+  display: none !important;
+}
