--- a/source/themes/custom/sata/styles/libraries/paragraph/full--callout-diagram.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--callout-diagram.scss
@@ -14,30 +14,58 @@
  * Component
  */
 
+
 .component-callout-diagram {
-  @include media('>=lg-plus') {
-    background-color: $primary-emerald;
-  }
+  position: relative;
 
   .component-callout-diagram__content {
     .field--name-field-callout-diagram-item {
       display: flex;
       flex-direction: column;
 
-      @include media('>=lg-plus') {
+      @include media('>=md') {
         flex-direction: row;
-        padding: rem(25px 0 25px 25px);
+        flex-wrap: wrap;
+      }
+
+      @include media('>=lg-plus') {
+        padding: rem(25px 0 0 25px);
+        flex-wrap: unset;
+        background-color: $primary-emerald;
       }
     }
 
     .field--name-field-callout-diagram-item > .field__item {
-      width: 25%;
+      width: 100%;
+
+      @include media('>=md') {
+        width: 50%;
+
+        &:first-child,
+        &:nth-child(3) {
+          padding-right: rem(5px);
+        }
+
+        &:last-child,
+        &:nth-child(2) {
+          padding-left: rem(5px);
+        }
+      }
 
       @include media('<lg-plus') {
-        width: 100%;
-
         &:not(:last-child) {
-          margin-bottom: rem(12px);
+          margin-bottom: rem(10px);
+        }
+      }
+
+      @include media('>=lg-plus') {
+        width: 25%;
+
+        &:first-child,
+        &:nth-child(3),
+        &:last-child,
+        &:nth-child(2) {
+          padding: 0;
         }
       }
     }
@@ -45,12 +73,37 @@
     .component-callout-diagram-item {
       position: relative;
 
+      @include media('<xs') {
+        @include container-full-width();
+      }
+
+      @include media('<lg-plus') {
+        display: flex;
+        flex-direction: row;
+        height: rem(120px);
+        max-width: rem(420px);
+        overflow: hidden;
+
+        &::after {
+          content: '';
+          position: absolute;
+          bottom: 17px;
+          right: -10px;
+          background-color: $primary-solar;
+          height: 7px;
+          width: 81px;
+          border-bottom-left-radius: 80%;
+          transform: rotate(328deg);
+        }
+      }
+
       .component-callout-diagram-item__content {
+        position: relative;
+
         @include media('<lg-plus') {
           background-color: $primary-emerald;
           display: flex;
           align-items: center;
-          clip-path: polygon(0 0, 100% 0, 100% 65%, 88% 100%, 0 100%);
 
           &::before {
             content: '';
@@ -62,24 +115,39 @@
             background-color: $primary-solar;
             z-index: 2;
           }
+        }
+      }
 
-          &::after {
-            content: '';
-            position: absolute;
-            height: 17px;
-            width: 80px;
-            bottom: 9px;
-            right: -10px;
-            background-color: $primary-solar;
-            transform: rotate(330deg);
-          }
+      .component-callout-diagram-item__blade {
+        background-color: $primary-emerald;
+        clip-path: polygon(0 0, 100% 0, 100% 65%, 0% 100%, 0 100%);
+
+        &::after {
+          content: '';
+          position: absolute;
+          height: 17px;
+          width: 90px;
+          bottom: 17px;
+          right: -10px;
+          background-color: $primary-solar;
+          transform: rotate(330deg);
+        }
+
+        .component-callout-diagram-item__blade-content {
+          width: 67px;
+        }
+
+        @include media('>lg-plus') {
+          display: none;
         }
       }
 
       .field--name-field-media-item {
-        width: 25%;
         z-index: 3;
 
+        @include media('<lg-plus') {
+          max-width: rem(120px);
+        }
         @include media('>=lg-plus') {
           width: 100%;
           padding-right: rem(25px);
@@ -95,7 +163,12 @@
         font-size: rem(16px);
         line-height: rem(20px);
         width: 100%;
-        padding: rem(15px 20px 15px 15px);
+        padding: rem(0 0 15px 5px);
+        z-index: 2;
+
+        @include media('<lg-plus') {
+          margin-right: -30px;
+        }
 
         @include media('>=lg-plus') {
           font-size: rem(20px);
@@ -120,219 +193,62 @@
       }
     }
   }
-}
 
-.component-steps {
-  .component-steps__content {
-    display: flex;
-    flex-direction: column;
-
-    p {
-      margin: 0;
-      font-weight: $fw-regular;
-      line-height: rem(24px);
-    }
-
-
-    .component-step {
-      &:not(:nth-last-of-type(1)) {
-        .component-step__title-wrapper,
-        .component-step__content {
-          @include media('<lg-plus') {
-            padding-bottom: rem(20px);
-          }
-        }
-      }
-
-      &:nth-child(1) {
-        .component-step__title-wrapper {
-          &::after {
-            top: 45%;
-            height: 100%;
-          }
-
-          @include media('>=lg-plus') {
-            &::after {
-              top: 50%;
-              left: 0;
-              width: 100%;
-              height: unset;
-            }
-          }
-        }
-      }
-
-      &:nth-last-of-type(1) {
-        .component-step__title-wrapper {
-          &::after {
-            top: 0;
-            height: 50%;
-          }
-
-          @include media('>=lg-plus') {
-            &::after {
-              top: 50%;
-              left: 0;
-              width: 0;
-              height: unset;
-              border-top: 0;
-            }
-          }
-        }
-      }
-
-      &:only-child {
-        .component-step__title-wrapper {
-          &::after {
-            top: 0;
-            height: 0;
-          }
-        }
-      }
-
-      @include media('<lg-plus') {
-        .component-step__inner {
-          display: flex;
-          flex-direction: row;
-          align-items: stretch;
-          position: relative;
-        }
-      }
-
-      @include media('>=lg-plus') {
-        max-width: 100%;
-        flex: 1 0 0;
-      }
-    }
-
-    @include media('>=lg-plus') {
-      @include container();
-      flex-direction: row;
-
-      &::after {
-        border-left: unset;
-        border-top: 2px dashed #EB8900;
-        top: rem(25px);
-        left: rem(25px);
-        width: 83%;
-        z-index: 0;
-      }
-    }
-  }
-
-  .component-steps__title {
-    @include type-header(h2, black, included);
-    font-size: rem(28px);
-    text-align: center;
-    margin-bottom: rem(40px);
-    text-transform: uppercase;
-    position: relative;
-    z-index: 1;
-
-    @include media('<lg-plus') {
-      line-height: rem(36px);
-    }
-
-    @include media('>=lg-plus') {
-      font-size: rem(40px);
-      margin-bottom: rem(80px);
-    }
-  }
-
-  .component-step__title-wrapper {
-    position: relative;
-
-    &::after {
-      position: absolute;
-      content: '';
-      top: 0;
-      left: 50%;
-      z-index: -1;
-    }
-
-    .component-step__title-container {
+  @include media('>=lg-plus') {
+    .component-callout-diagram__bottom-container {
       position: relative;
-      width: rem(56.7px);
-      max-width: rem(56.7px);
-      max-height: rem(64px);
-
-      svg {
-        z-index: 1;
-      }
-
-      @include media('<lg-plus') {
-        margin: 0;
-      }
-
-      @include media('>=lg-plus') {
-        width: 100%;
-        max-width: rem(101px);
-        max-height: rem(114px);
-      }
-    }
-
-    @include media('<lg-plus') {
-      flex: 0 0 0;
-      margin-right: rem(8px);
+      display: flex;
+      flex-direction: row;
+      margin-top: -24px;
+      overflow: hidden;
 
       &::after {
-        height: 100%;
-        border-left: 2px dashed $primary-emerald;
+        content: '';
+        position: absolute;
+        bottom: 15px;
+        right: -9px;
+        background-color: $primary-solar;
+        height: 7px;
+        width: 81px;
+        border-bottom-left-radius: 80%;
+        transform: rotate(331deg);
       }
-    }
 
-    @include media('>=lg-plus') {
-      margin-bottom: rem(30px);
-
-      &::after {
-        top: 50%;
-        left: 0;
+      .component-callout-diagram__bar-solar {
+        position: relative;
         width: 100%;
-        border-top: 2px dashed $primary-emerald;
+        height: 60px;
+        background-color: $primary-emerald;
+
+        .component-callout-diagram__bar-solar-content {
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          background-color: $primary-solar;
+          height: rem(17px);
+        }
       }
-    }
-  }
 
-  .component-step__title {
-    color: $white;
-    font-family: $font-brand;
-    font-size: rem(16px);
-    font-weight: 800;
-    text-transform: uppercase;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: rem(5px);
-    z-index: 1;
+      .component-callout-diagram__blade {
+        background-color: $primary-emerald;
+        clip-path: polygon(0 0, 100% 0, 100% 45%, 0% 100%, 0 100%);
 
-    @include media('<lg-plus') {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      line-height: rem(16px);
-    }
+        &::before {
+          content: '';
+          position: absolute;
+          height: 17px;
+          width: 90px;
+          bottom: 15px;
+          right: -8px;
+          background-color: $primary-solar;
+          transform: rotate(334deg);
+        }
 
-    @include media('>=lg-plus') {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: rem(20px);
-      line-height: rem(24px);
-      padding: rem(10px);
-      width: 100%;
-    }
-  }
-
-  .component-step__content {
-    @include media('<lg-plus') {
-      padding-right: rem(20px);
-    }
-
-    @include media('>=lg-plus') {
-      padding-right: rem(40px);
+        .component-callout-diagram__blade-content {
+          width: 70px;
+          height: 60px;
+        }
+      }
     }
   }
 }
