--- a/source/themes/custom/sata/styles/libraries/paragraph/full--callout-diagram.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--callout-diagram.scss
@@ -29,7 +29,9 @@
       }
 
       @include media('>=lg-plus') {
+        padding: rem(25px 0 0 25px);
         flex-wrap: unset;
+        background-color: $primary-emerald;
       }
     }
 
@@ -58,13 +60,12 @@
 
       @include media('>=lg-plus') {
         width: 25%;
-        background-color: $primary-emerald;
 
         &:first-child,
         &:nth-child(3),
         &:last-child,
         &:nth-child(2) {
-          padding: rem(25px 25px 0);
+          padding: 0;
         }
       }
     }
@@ -149,6 +150,7 @@
         }
         @include media('>=lg-plus') {
           width: 100%;
+          padding-right: rem(25px);
         }
       }
 
@@ -172,7 +174,7 @@
           font-size: rem(20px);
           line-height: rem(26px);
           margin-top: rem(20px);
-          padding: 0;
+          padding: rem(0 25px 0 0);
         }
       }
 
