feature/VYRKCATG-529: Setup W1 pages for SATA to show a grid of sub-category pages.

--- a/docroot/themes/custom/sata/templates/node/node--product-category--full.html.twig
+++ b/docroot/themes/custom/sata/templates/node/node--product-category--full.html.twig
@@ -84,6 +84,13 @@
 
   <div{{ content_attributes }}>
     {{ content }}
+
+    {% if category_grid %}
+      <div class="category-grid">
+        {{ category_grid }}
+      </div>
+    {% endif %}
+
     <div class="product-category-view-section">
       {{ filters }}
       {{ view }}
