added width to call out diagram

--- a/source/themes/custom/sata/styles/libraries/paragraph/full--callout-diagram.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--callout-diagram.scss
@@ -104,6 +104,7 @@
           background-color: $primary-emerald;
           display: flex;
           align-items: center;
+          width: 100%;
 
           &::before {
             content: '';
