--- a/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
@@ -19,22 +19,29 @@
 
   .component-content-callout__content-wrapper {
     position: relative;
+
+    @include media('<lg-plus') {
+      background-color: $primary-emerald;
+      border-bottom: rem(20px) solid $primary-solar;
+    }
   }
 
   .component-content-callout__content--position {
     @include container();
 
     .component-content-callout__content {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 100%;
-      max-width: rem(454px);
-      padding: rem(20px);
-      z-index: 5;
+      @include media('>=lg-plus') {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 100%;
+        max-width: rem(450px);
+        z-index: 5;
+      }
 
-      @include media('<md') {
-        max-width: 100%;
+      @include media('<lg-plus') {
+        padding: rem(10px 0 50px);
+        max-width: rem(450px);
       }
 
       .component-content-callout__title {
@@ -49,7 +56,7 @@
         line-height: rem(48px);
         margin-bottom: rem(20px);
 
-        @include media('<md') {
+        @include media('<lg-plus') {
           font-size: rem(40px);
           line-height: rem(48px);
         }
@@ -61,7 +68,7 @@
         line-height: rem(24px);
         margin-bottom: rem(28px);
 
-        @include media('<md') {
+        @include media('<lg-plus') {
           font-size: rem(14);
           line-height: rem(24);
         }
@@ -73,34 +80,6 @@
 
       .field--name-field-link a {
         @include btn(solar);
-        //color: $primary-emerald;
-        //font-weight: $fw-extra-bold;
-        //font-size: rem(24px);
-        //border: 1px solid $primary-emerald;
-        //background-color: $black;
-        //display: inline-flex;
-        //justify-content: center;
-        //padding: rem(25px) rem(20px);
-        //flex: auto;
-        //
-        //&:hover {
-        //  color: $black;
-        //  border-color: $black;
-        //  background-color: $primary-emerald;
-        //}
-        //
-        //@include media('<sm') {
-        //  padding: rem(25px) rem(20px);
-        //
-        //  &:after {
-        //    margin-left: .5rem;
-        //  }
-        //}
-        //
-        //@include media('>=lg-plus') {
-        //  font-size: rem(32px);
-        //  padding: rem(35px) rem(30px);
-        //}
       }
     }
   }
@@ -114,6 +93,20 @@
 
     img {
       width: 100%;
+    }
+
+    @include media('<lg-plus') {
+      display: none;
+    }
+  }
+
+  @include media('>=lg-plus') {
+    &.component-content-callout__color-theme--emerald {
+      .component-content-callout__content {
+        background-color: $primary-emerald;
+        padding: rem(20px 90px 30px 30px);
+        max-width: rem(570px);
+      }
     }
   }
 }
